--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -66,7 +66,7 @@
                             <div class="member-image">
                                 <i class="fas fa-shield-alt"></i>
                             </div>
-                            <h3>@skyw0rm.py</h3>
+                            <h3>@skyw0rm</h3>
                             <p>Siber Güvenlik & Yazılım</p>
                         </div>
                         <div class="team-member">
